Fix momentous scrolling on mobile Safari

--- a/src/client/student/css/layout.less
+++ b/src/client/student/css/layout.less
@@ -16,6 +16,7 @@ html, body, #root, .layout {
   position: relative;
   flex: 1 1 0px;
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .layout {
